--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3852,12 +3852,15 @@ a {
         height: 731px;
         display: grid;
         grid-template-columns: 17% 83%;
+        overflow: hidden;
+
     }
 
     .main-left {
         background: #8CF889;
         display: flex;
         flex-direction: column;
+        background: black;
     }
 
     .main-left-top {
@@ -3961,11 +3964,6 @@ a {
         font-family: Poppins;
         color: #4A4747;
     }
-
-
-
-
-
 
     @media screen and (max-width: 1250px) {
         .main-left-middle-content h2 {
@@ -4411,7 +4409,7 @@ a {
     }
 
     .table-header {
-        background-color: #B9FFB7;
+        background-color: black;
         font-size: 17px;
         font-family: Montserrat;
         text-align: center;
@@ -6152,6 +6150,7 @@ a {
         justify-content: center;
         margin-right: 30px;
         cursor: pointer !important;
+        height: 15px;
     }
 
     .main-right-top-three-content p {
@@ -6258,6 +6257,12 @@ a {
         align-items: center;
         justify-content: center;
         height: 100%;
+    }
+
+    .error-div {
+        font-size: 17px;
+        background-color: black;
+        color: red !important;
     }
 }
 
