--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@
 
 @import url('Component/Admin/Admin_Center_View.css');
 @import url('Component/Admin/Admin_Center_Top.css');
-
+@import url('Component/Admin/Admin_Center_Add.css');
 
 a {
     text-decoration: none;
